Fix - Gutenberg alignment issue on blog page

--- a/style.css
+++ b/style.css
@@ -1897,6 +1897,7 @@ sidebar layout CSS
 .no-sidebar .alignfull {
 	margin-left: calc(50% - 50vw);
 	margin-right: calc(50% - 50vw);
+	max-width: unset;
 }
 
 .no-sidebar-full-width .alignwide,
